fix bug with scrolling and adjust minor layout issues

--- a/src/components/style/Footer.css
+++ b/src/components/style/Footer.css
@@ -1,7 +1,7 @@
 footer{
 	color: black;
 	font-family: 'Comfortaa', cursive;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: white;
 	font-size: 14px;
   width: 100%;
 	text-align: center;
